--- a/pom.xml
+++ b/pom.xml
@@ -284,6 +284,21 @@
 			<version>1.4.7</version>
 		</dependency>
 		
+		<!-- json -->
+
+		<!-- CKEditor 이미지 업로드를 위한 json-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.8</version>
+		</dependency> 
+		
 		<!-- EMail(springmember) -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
