--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,20 @@
 			<artifactId>commons-email</artifactId>
 			<version>1.3.3</version>
 		</dependency>
+		
+		<!-- CKEditor 이미지 업로드를 위한 json-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+		
 	</dependencies>
 
 
