--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 			<id>codelds</id>
 			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
 		</repository>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 	<dependencies>
 	
@@ -325,7 +329,15 @@
 			<artifactId>commons-email</artifactId>
 			<version>1.3.3</version>
 		</dependency>
+		<!--아임포트-->
+		<dependency>
+			<groupId>com.github.iamport</groupId>
+			<artifactId>iamport-rest-client-java</artifactId>
+			<version>0.2.14</version>
+		</dependency>
 	</dependencies>
+
+
 
 
 
